--- a/MBLog/app/build.gradle
+++ b/MBLog/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile project(':library')
+
+    // please use -> debugCompile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.facebook.stetho:stetho:1.3.1'
 }
